updated the encoder to use standard base64 java8 api.