@@ -2,22 +2,21 @@ package org.globsframework.utils.serialization;
 
 import org.globsframework.utils.Strings;
 import org.globsframework.utils.exceptions.IOFailure;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
+import java.util.Base64;
+
 
 public class Encoder {
   private Encoder() {
   }
 
   public static String byteToString(byte[] cryptedBytes) {
-    BASE64Encoder b64 = new BASE64Encoder();
-    return Strings.removeNewLine(b64.encode(cryptedBytes));
+    return Strings.removeNewLine(Base64.getEncoder().encodeToString(cryptedBytes));
   }
 
   public static byte[] stringToByte(String text) {
     try {
-      BASE64Decoder b64 = new BASE64Decoder();
-      return b64.decodeBuffer(text);
+      return Base64.getDecoder().decode(text);
     }
     catch (Exception e) {
       throw new IOFailure(e);
